# invocations

./: .coveragerc  .flake8  .gitignore  .travis.yml  MANIFEST.in  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tasks.py
.circleci/: config.yml
docs/: changelog.rst  conf.py  index.rst
docs/api/: autodoc.rst  ci.rst  console.rst  docs.rst  environment.rst  packaging.rst  pytest.rst
invocations/: __init__.py  _version.py  autodoc.py  checks.py  ci.py  console.py  docs.py  environment.py  packaging.py  pytest.py  testing.py  travis.py  util.py  watch.py
invocations/packaging/: __init__.py  release.py  semantic_version_monkey.py  vendorize.py
tests/: checks.py  conftest.py  console.py  environment.py  main.py  pytest_.py
tests/autodoc/: base.py
tests/autodoc/_support/: conf.py  mytasks.py
tests/autodoc/_support/docs/: api.rst  index.rst
tests/packaging/: release.py
tests/packaging/_support/: index.rst  no_unreleased_1.1_bugs.rst  no_unreleased_1.x_features.rst  outstanding_1.1_issues.rst  unreleased_1.1_bugs.rst  unreleased_1.x_features.rst
tests/packaging/_support/fakepackage/: noversion.py
tests/packaging/_support/versions/: v110.py
