[project]
name = "invocations"
requires-python = ">=3.9"
version = "4.0.2"
description = "Common/best-practice Invoke tasks and collections"
readme = "README.rst"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [{name = "Jeff Forcier", email = "jeff@bitprophet.org"}]

dependencies = [
    # Core dependency
    "invoke>=1.7.2",
    # Dependencies for various subpackages.
    # NOTE: these used to be all optional (only complained about at import
    # time if missing), but that got hairy fast, and these are all
    # pure-Python packages, so it shouldn't be a huge burden for users to
    # obtain them.
    "blessings>=1.6",
    "build>=1.3",
    # For envs that don't actually have pip - we use some of its tooling atm.
    "pip~=25.2",
    "releases>=1.6",
    "semantic_version>=2.4,<2.7",
    "tabulate>=0.7.5",
    "tqdm>=4.8.1",
    "twine>=1.15",
    "wheel>=0.24.0",
]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]


[project.urls]
Homepage = "https://invocations.readthedocs.io"
Source = "https://github.com/pyinvoke/invocations"
Changelog = "https://invocations.readthedocs.io/en/latest/changelog.html"
CI = "https://app.circleci.com/pipelines/github/pyinvoke/invocations"
Issues = "https://github.com/pyinvoke/invocations/issues"

[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    # For testing
    "pytest-relaxed>=2",
    "invoke>=2",
    "releases>=2.0.1",
    "pytest-cov==2.4.0",
    "pytest-mock==3.2.0",
    # Oldest version that works on Python >3.11
    "watchdog==1.0.2",
    "coverage==4.4.2",
    "icecream==2.1.3",
    # Formatting
    "black==22.12.0",
    # Linting
    "flake8~=7.3.0",
]
